--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Async event handing made easy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && ava"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/rrdelaney/shady/issues"
   },
-  "homepage": "https://github.com/rrdelaney/shady"
+  "homepage": "https://github.com/rrdelaney/shady",
+  "devDependencies": {
+    "ava": "^0.10.0",
+    "standard": "^5.4.1"
+  }
 }
