--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "async",
-    "event"
+    "event",
+    "shady"
   ],
   "author": "Ryan Delaney <rrdelaney@outlook.com>",
   "license": "MIT",
